# jeu_C

./: CMakeLists.txt  gameSurface.c  gameSurface.h  main.c  test
animations/: roadScrolling.c  roadScrolling.h
parameter/: configuration.h
sprites/: car.h  road.h
